# stratum

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md  stratum.instructions.md
.github/workflows/: python_tests.yml  rust_tests.yml  sync_main_to_benchmark.yml
benchmarks/adapters/: bench_applytocols.py  bench_onehot_encoder.py  bench_string_encoder.py  bench_tablevectorizer.py
benchmarks/logical_optimizer/end-to-end/uk-house-price/: feature_transform.py  lightgbm_hyperparameter_tuning.py  preprocess1_elasticnet.py  preprocess1_lightgbm.py  preprocess1_ridge.py  preprocess1_xgboost.py  results.txt  setup.sh  tabvec_elasticnet.py  tabvec_lightgbm.py  tabvec_ridge.py  tabvec_xgboost.py  two_level_gridsearch_exp.py  two_level_gridsearch_exp2.py  two_level_gridsearch_exp_polars.py
benchmarks/runtime/: buffer_pool_evictions.py  buffer_pool_input_release.py
benchmarks/utils/: memory_consumption_tracker.py
stratum/: _api.py  _config.py
stratum/adapters/: one_hot_encoder.py  string_encoder.py
stratum/optimizer/: _algebraic_rewrites.py  _numeric_rewrites.py  _op_cse.py  _op_utils.py  _optimize.py  _projection_rewrites.py
stratum/optimizer/ir/: _aggregation_ops.py  _column_expr.py  _dataframe_ops.py  _join_ops.py  _map_ops.py  _numeric_ops.py  _ops.py  _projection_ops.py  _selection_ops.py  _source_ops.py  _split_ops.py
stratum/optimizer/physical/: __init__.py  _registry.py  _rust_registry.py
stratum/patching/: _patching.py
stratum/runtime/: _buffer_pool.py  _object_serialization.py  _object_size.py  _scheduler.py
stratum/tests/: test_import_patch.py
stratum/tests/logical_optimizer/: test_aggregation_ops.py  test_apply_choice.py  test_dataframe_ops.py  test_join_ops.py  test_map_ops.py  test_numeric_ops.py  test_op_utils.py  test_ops.py  test_projection_ops.py  test_selection_ops.py  test_source_ops.py  test_split_ops.py  test_type_inference.py
stratum/tests/logical_optimizer/algebraic_rewrites/: test_numeric.py  test_numeric_complex_fanout.py
stratum/tests/physical/: test_registry.py
stratum/tests/runtime/: runtime_test_utils.py  test_buffer_pool.py  test_object_serialization.py
