[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "stratum-ai" # PyPi name
version = "0.0.0.dev0"
description = "skrub with a Rust backend"
readme = "README.md"
authors = [{name = "Arnab Phani"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
dependencies = [
    "scikit-learn==1.8",
    "pandas==3.0.2",
    "skrub==0.8.0",
    "polars",
    "graphviz",
    "pyarrow>=22.0.0",
    "pygments>=2.20.0",
    "urllib3>=2.7.0",
    "idna>=3.15"
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov",
    "coverage[toml]",
    "lightgbm>=4.6.0",
    "xgboost>=3.1.1",
]
benchmark = [
]
dev = [
]

[project.urls]
Homepage = "https://github.com/deem-data/stratum"
Issues = "https://github.com/deem-data/stratum/issues"

[tool.maturin]
manifest-path = "_rust/Cargo.toml"
module-name = "stratum._rust_backend_native"
python-source = "."

[tool.uv]
# Tell uv to rebuild when Rust source files change
cache-keys = [
    {file = "pyproject.toml"},
    {file = "_rust/Cargo.toml"},
    {file = "_rust/Cargo.lock"},
    {file = "_rust/**/*.rs"},
]

[dependency-groups]
dev = [
    "maturin>=1.10.1",
]

[tool.coverage.run]
source = ["stratum"]
omit = [
    "stratum/tests/*",
    "**/tests/**",
    "*/__pycache__/*",
    "*/_rust_backend_native.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
